<resources>
    <string name="app_name">MaffPuff</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="enter_answer">Enter answer</string>
    <string name="submit">Submit</string>
    <string name="change_math">Change Math</string>
    <string name="loading">Loading...</string>
    <string name="math_type">Math Type</string>
    <string name="calculate_the_following">Calculate the following:</string>
    <string name="correct_0">Correct: 0</string>
    <string name="incorrect_0">Incorrect: 0</string>
</resources>